--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,9 @@
-::-webkit-scrollbar {
-    width: 0; 
-    background: transparent;  
-}
-
 body{
-    font-family: Montserrat;
+    font-family:Montserrat;
     margin: 0;
-    background-color:black;
+    background-color: #191919;
+    overflow-x:hidden;
+    
 }
 .headerDiv{
     background-color: #432C7A;
@@ -27,7 +24,7 @@ body{
 }
 
 .profile{
-    font-family: Montserrat;
+    font-family:Montserrat;
     margin:15px;
     float: right;
     font-size: 14px;
@@ -39,6 +36,7 @@ body{
     background-size: 33px;
     background-position: left;
     background-repeat: no-repeat;
+    
 }
 
 .profile:hover{
@@ -50,7 +48,37 @@ body{
 
 .profile > span{
     padding: 0 6px 0 35px;
-    font-weight: bold;
+    font-weight: 600;
+}
+
+
+
+@media screen and (max-width:530px){
+    .profile{
+        margin:5px;
+        font-size: 0%;
+        width: 33px;
+    }
+    
+}
+@media screen and (max-width:400px){
+    .profile{
+        font-size: 0%;
+        width: 20px;
+        height: 20px;
+        background-size: 25px;
+    }
+   
+    
+}
+@media screen and (max-width:390px){
+    .profile{
+        font-size: 0%;
+        width: 0;
+        height: 0;
+        background-size:0;
+    }
+   
 }
 
 .expand{
