--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,6 +8,7 @@ a{
     text-decoration: none;
     color: white;
 }
+
 ul>.navItems{
     list-style: none;
     background-color: black;
@@ -59,6 +60,7 @@ ul>.navItems2>li:hover{
     padding-top: 12px;
 }
 hr{
-    width: auto;
-    opacity: 0.5;
+    width: 90%;
+    opacity: 0.3;
+    text-align: center;
 }
