--- a/src/styles/PlaylistRect.css
+++ b/src/styles/PlaylistRect.css
@@ -12,7 +12,7 @@
   
 }
 .playlistRectButton{
-    font-family: Montserrat;
+    font-family:"Montserrat";
     border:10px solid transparent;
     border-radius: 5px;
     background:rgba(247,247,247,0.1);
@@ -20,8 +20,9 @@
     margin:5px; 
     width: 29em;
     text-align: start;
-    font-weight:bold;
+    font-weight: 600;
 }
+
 .playlistRectButton:hover{
     background:rgba(247,247,247,0.2);
 }
